@@ -22,4 +22,3 @@ Unix-based systems. Public keys will usually have a .pub extension.
 Command-Shift-. (period) to display hidden directories so that the
 .ssh directory is visible.
 <br/><br/>
-If you don't have an SSH keypair or want to create a new SSH keypair, <button onClick="window.location='generatesshkey.php'">generate and download an SSH keypair</button>.
