@@ -2,6 +2,7 @@
 
 = GENI Clearinghouse and Portal Release Notes =
 == 1.8 ==
+  * Conditionalize display of the generate ssh key button (#625)
   * tools-admin.php is fake (#539)
   * Update GEMINI integration (#623)
   * gemini.php is issuing PHP warnings (#619)
